[package]
name = "mybin-async"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
bytes = "0.5.6"
thiserror = "1.0"
async-net = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
rust-crypto = "0.2"
mybin-core = { version = "0.1.0", path = "../mybin-core" }
bytes-parser = { version = "0.1.0", path = "../bytes-parser" }
pin-project = "0.4.23"
futures = "0.3.5"

[dev-dependencies]
env_logger = "0.7.1"
smol-potat = "0.5.0"
smol = "0.3.3"
chrono = "0.4.15"
bigdecimal = "0.1.2"
