[package]
name = "mybin-async"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
bytes = "0.5"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
rust-crypto = "0.2"
mybin-core = { version = "0.1.0", path = "../mybin-core" }
bytes-parser = { version = "0.1.0", path = "../bytes-parser" }
pin-project = "0.4"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"]}
rand = "0.7"

[dev-dependencies]
env_logger = "0.7"
smol-potat = "0.5"
smol = "1.0"
chrono = "0.4"
bigdecimal = "0.1"
async-net = "1.2"