[package]
name = "mybin-async"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
bytes = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
rust-crypto = "0.2"
mybin-core = { version = "0.1.0", path = "../mybin-core" }
bytes-parser = { version = "0.1.0", path = "../bytes-parser" }
pin-project-lite = "0.2"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"]}
rand = "0.8"

[dev-dependencies]
env_logger = "0.8"
smol-potat = "1.1"
smol = "1.2.5"
chrono = "0.4"
bigdecimal = "0.2"
async-net = "1.5"
async-executor = "1.4"