[package]
name = "mybin-core"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0"
bytes-parser = { version = "0.1.0", path = "../bytes-parser" }
crc-any = "2.3"
linked-hash-map = "0.5.3"
bytes = "0.5.6"
smol_str = "0.1.16"
bigdecimal = "0.1.2"
chrono = "0.4.15"
