[package]
name = "mybin-core"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
bitflags = "1.2"
thiserror = "1.0"
bytes-parser = { version = "0.1.0", path = "../bytes-parser" }
crc-any = "2.3"
linked-hash-map = "0.5"
bytes = "1.0"
smol_str = { version = "0.1", features = ["serde"] }
bigdecimal = "0.2"
chrono = "0.4"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13"