[package]
name = "mybin-parser"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
nom = "5.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
crc-any = "2.3"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
bitflags = "1.2.1"
