[package]
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
name = "mybinmsg"
version = "0.1.0"

[[bin]]
name = "mybinmsg"
path = "src/mybinmsg.rs"

[dependencies]
anyhow = "1.0"
async-io = "1.3.1"
bytes = "1.0"
env_logger = "0.8"
log = "0.4"
regex = "1"
smol = "1.2.5"
smol_str = "0.1"
async-executor = "1.4"
structopt = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"

[dependencies.mybin-async]
path = "../mybin-async"
version = "0.1.0"

[dependencies.mybin-core]
path = "../mybin-core"
version = "0.1.0"

[dev-dependencies]
smol-potat = "1.1"
